apps/platform/filebrowser/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`quantum.artr.com.br`)
      kind: Rule
      services:
        - name: filebrowser
          port: 80
  tls:
    secretName: wildcard-artr-com-br-tls
